fixed overflow
fixed overflow

--- a/index.css
+++ b/index.css
@@ -433,9 +433,8 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-    .rightPartPromo {
-        border: 2px solid red;
-        overflow: hidden;
+    body {
+        overflow-x: hidden;
     }
 }
 
